test/syc/good/initarrsz.c
/*
 * Initialize an array with size determined by the initializer.
 */

int a[] = { 1, 2, 3 };
int b[] = { 1, 2, 3, 4, 5 };

/* Array of arrays */
int c[][2] = { { 1, 2 }, { 3, 4 }, { 5, 6} };
