test/syc/bad/initidxnonarray.c
/*
 * Array index in non-array initializer.
 */

int a[3] = {
	[1][2] = 3
};
